# wool_shelter

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
app/core/: config.py  container.py  database.py
app/fixtures/: all_data.json
app/frontend/templates/: index.html
app/migrations/: env.py
app/migrations/versions/: 0001_init_animals.py  0002_created_at.py
app/models/: animal.py  user.py
app/repositories/: animal_repo.py  user_repo.py
app/schemas/: animal.py  user.py
app/services/: animal_services.py  auth_services.py  user_services.py
app/tests/: conftest.py
app/tests/unittest/: conftest.py  test_animal_services.py  test_user_service.py
app/utils/: datetime_format.py  security.py
data/: shelter.db
scripts/: db_control.py  dump_data.py  load_data.py
