[project]
name = "wool-shelter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.1",
]

[tool.black]
line-length = 100
skip-string-normalization = true
